--- a/contracts/cw20-token/Cargo.toml
+++ b/contracts/cw20-token/Cargo.toml
@@ -4,12 +4,6 @@ version = "0.1.0"
 authors = ["Andrew Nikitin <lampkin.diet@gmail.com>"]
 edition = "2021"
 
-exclude = [
-  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
-  "contract.wasm",
-  "hash.txt",
-]
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
@@ -40,12 +34,8 @@ optimize = """docker run --rm -v "$(pwd)":/code \
 """
 
 [dependencies]
-cosmwasm-schema = "1.4.0"
-cosmwasm-std = { version = "1.4.0", features = [
-    "cosmwasm_1_3",
-    # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
-    # "cosmwasm_1_4",
-] }
+cosmwasm-schema = "1.1.0"
+cosmwasm-std = { version = "1.1.0"}
 cw-storage-plus = "1.1.0"
 cw2 = "1.1.0"
 cw20 = "1.1.0"
@@ -55,3 +45,4 @@ thiserror = { version = "1.0.31" }
 
 [dev-dependencies]
 cw-multi-test = "0.16.5"
+serde_json = "1.0.64"
